# Rakuten-Unified-Memory

./: CHANGE_LOG.md  LICENSE  README.md  machines.csv
app/hash_table/: CMakeLists.txt  hash_table.cpp
app/kvs/: CMakeLists.txt  KVS.cpp  Value.cpp  Value.h  base64.cpp  base64.h  hashring.cpp  hashring.h  main.cpp
app/mem_test/: CMakeLists.txt  main.cpp
app/s3cmd/: CMakeLists.txt  KVS.cpp  KVS.h  Key.cpp  Key.h  Value.cpp  Value.h  hashring.cpp  hashring.h  main.cpp  s3cmd_rum.cpp  s3cmd_rum.h
heartbeat/: CMakeLists.exe.txt  CMakeLists.lib.txt  CMakeLists.txt  Heartbeat.cpp  Heartbeat.h  build_test.sh
paxos/: CMakeLists.txt  TCP_comms.cpp  TCP_comms.h  UDP_comms.cpp  UDP_comms.h  Value.cpp  Value.h  acceptor.cpp  acceptor.h  comms.cpp  comms.h  driver.cpp  driver.h  learner.cpp  learner.h  node.cpp  node.h  paxos_id.cpp  paxos_id.h  paxos_instance.cpp  paxos_instance.h  paxos_msg.cpp  paxos_msg.h  paxos_role_base.h  paxos_timer.cpp  paxos_timer.h  proposer.cpp  proposer.h  util.cpp  util.h
paxos/test/: Makefile  test_paxos_client.cpp  test_paxos_server.cpp
rum_master/: CMakeLists.txt  Location.c  Location.cpp  Location.h  README.md  address_lru.cpp  address_lru.hpp  daemon.cpp  daemon.h  dpdk.cpp  dpdk.h  dpdk_transition.cpp  dpdk_transition.h  driver.cpp  driver_2.cpp  fsm.cpp  fsm.h  hash_type.h  ipv6.h  packet.c  packet.h  packet_type.h  request.hpp  rum.cpp  rum.h  rum_c_version.cpp  rum_c_version.h  test_fsm.cpp  util.h
rum_master/libsp/: Doxyfile  LICENSE  README.md
rum_master/libsp/autotools/: Makefile.am  README  configure.ac
rum_master/libsp/src/: complexmultiply.h  estimator.h  filter.h  fir.h  iir.h
rum_master/libsp/test/: CMakeLists.txt  fir_regression.cc  fir_regression.h  iir_regression.cc  iir_regression.h  iir_regression.m  main.cc
rum_master/libutil/: README.md
rum_master/libutil/src/: histogram.hpp  mathext.hpp  stopwatch.hpp
rum_slave/: CMakeLists.txt  README.md  SlavePaxos.cpp  SlavePaxos.h  debug.h  domake  hpc_slave.cpp  nic.c  nic.h  slave_paxos_msg.cpp  slave_paxos_msg.h
scripts/: build.sh  build_all.sh  build_dpdk.sh  build_hashtable.sh  build_heartbeat.sh  build_kvs.sh  build_library.sh  build_lua.sh  build_paxos.sh  build_paxos_server.sh  build_python.sh  build_rum_lib.sh  build_s3cmd.sh  build_s3cmd_test.sh  build_slave.sh  build_tests.sh  clean.sh  generate_simple_data.sh  master_upload.sh  master_upload_kamata.sh  run_slave.sh  setup.sh  slave_upload.sh  slave_upload_kamata.sh  upload.sh  upload_kamata.sh
